# ProyectoAnomalias

./: .gitignore  anomalias.ipynb  train_model.py
conf/: config.yaml
conf/logger/: wandb.yaml
conf/loss/: classification.yaml  distillation.yaml  distillation_v1.yaml  distillation_v2.yaml  distillation_v3.yaml  l1.yaml  mse.yaml  ssim.yaml  ssim_l1.yaml
conf/model/: resnet_distilled.yaml  resnet_scratch.yaml  unet_autoencoder.yaml
conf/optimizer/: adam.yaml  adam_low.yaml  adam_mid.yaml  adamw.yaml  sgd.yaml  sgd_low.yaml
conf/trainer/: default.yaml
src/: __init__.py
src/data/: __init__.py  mvtec_datamodule.py
src/models/: __init__.py  autoencoder_unet.py  custom_resnet.py  resnet_distilled.py  resnet_scratch.py
trainer-project/: README.md  requirements.txt  setup.cfg
trainer-project/src/: train.py  trainer.py
trainer-project/src/configs/: default.yaml
trainer-project/src/data/: loader.py
trainer-project/src/models/: __init__.py  model.py
trainer-project/src/utils/: helpers.py
