[metadata]
name = trainer-project
version = 0.1.0
description = A project for training machine learning models.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/trainer-project

[options]
packages = find:
install_requires =
    numpy
    pandas
    torch
    torchvision

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*